Fixed side white gap on mobile

--- a/resources/assets/sass/admin/variable.scss
+++ b/resources/assets/sass/admin/variable.scss
@@ -149,7 +149,7 @@ $breadcrumb-bg:                   #fff;
 $breadcrumb-margin-bottom:        1.5rem;
 
 // Cards
-$card-border-width:               0px!default
+$card-border-width:               0px!default;
 $card-border-color:               transparent!default;
 
 $card-border-radius:              0px !default;
